# Trainable-Candle

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  FINAL_SOLUTION.md  GPU_CHANGES_SUMMARY.md  GPU_LORA_GUIDE.md  README.md  TECHNICAL_DETAILS.md
candle-core/: Cargo.toml
candle-core/src/: cuda_lora_backward.rs  lib.rs  lora_backward_ops.rs  tensor.rs
candle-core/src/cuda_backend/: custom_ops.rs  mod.rs
candle-examples/examples/: gpu_lora_training.rs
candle-kernels/: Cargo.toml  build.rs
candle-kernels/src/backward/: lora_backward_production.cu
candle-lora-gpu/: Cargo.toml  README.md  build.rs
candle-lora-gpu/examples/: train_lora_production.rs
candle-lora-gpu/src/cuda_kernels/: attention_backward.cu  attention_kernels.cu  kernels.h  lora_optimized.cu  norm_backward.cu
candle-lora-gpu/src/rust/: lora_backward_ops.rs
candle-nn/src/: adam_trainable.rs  backward.rs  gradient_checkpoint.rs  lib.rs  linear_generic.rs  trainable_tensor.rs
src/: lib.rs
src/cuda_kernels/: lora_backward.cu  lora_simple.cu  norm_kernels.cu
src/rust/: cuda_lora_backward.rs
tests/: test_lora_production.rs
